--- a/Glossary.qmd
+++ b/Glossary.qmd
@@ -252,10 +252,9 @@ Histograms can be used to visualize a variety of different types of data. They a
 
 Histograms are a valuable tool for data analysis. They can be used to identify patterns and trends in the data, to compare different datasets, and to make inferences about the population from which the data was drawn. Histograms are a simple and easy-to-understand way to visualize data, and they can be used by people with a variety of levels of statistical expertise.
 
-## Bray-Curtis distance measurement
+## Bray-Curtis distance measurement {#sec-bray}
 
 Bray-Curtis distance measurement as used in multivariate analysis.
-
 
 
 Bray-Curtis distance is a metric used to measure the dissimilarity between two samples. It is based on the relative abundance of species in each sample. The Bray-Curtis distance is calculated as follows:
@@ -284,3 +283,67 @@ Here are some of the disadvantages of using Bray-Curtis distance:
 
 Overall, Bray-Curtis distance is a useful metric for measuring the dissimilarity between two samples. It is relatively easy to calculate and it is sensitive to changes in the relative abundance of species. However, it is important to be aware of its limitations before using it.
 
+## Euclidean distance {#sec-euclid}
+
+Euclidean distance is a measure of the distance between two points in a Euclidean space. In multivariate analysis, it is used to measure the distance between two data points, which are represented by vectors. The Euclidean distance between two data points is calculated as follows:
+
+Code snippet
+d = sqrt( (x1 - x2)^2 + (y1 - y2)^2 + ... + (zn - zn)^2 )
+Use code with caution. Learn more
+where:
+
+d is the Euclidean distance between the two data points
+x1, y1, z1 are the values of the first data point
+x2, y2, z2 are the values of the second data point
+n is the number of dimensions
+
+The Euclidean distance is a straight-line distance between two points. It is the most commonly used distance measure in multivariate analysis. It has a number of advantages, including:
+
+* It is easy to calculate. 
+* It is intuitively appealing. 
+* It is relatively robust to outliers. 
+
+However, the Euclidean distance can be sensitive to the scale of the variables. For example, a difference of 1 unit on a variable that is measured in centimeters is much less significant than a difference of 1 unit on a variable that is measured in meters. To address this issue, it is often helpful to standardize the variables before calculating the Euclidean distance.
+
+The Euclidean distance can be used in a variety of multivariate analysis techniques, including:
+
+* Cluster analysis (@sec-cluster). 
+* Principal component analysis. 
+* Linear discriminant analysis. 
+* k-nearest neighbors. 
+
+Cluster analysis is a technique for grouping data points together based on their similarity. Principal component analysis is a technique for reducing the dimensionality of data while preserving as much of the variation as possible. Linear discriminant analysis is a technique for classifying data points into two or more groups. k-nearest neighbors is a non-parametric machine learning algorithm that can be used for classification and regression tasks.
+
+The Euclidean distance is a powerful tool that can be used to analyze multivariate data. It is important to understand its strengths and weaknesses in order to use it effectively.
+
+## Cluster analysis {#sec-cluster}
+
+Cluster analysis is a multivariate analysis technique that groups data points together based on their similarity. It is an **unsupervised learning** technique, meaning that it does not require any prior knowledge of the data.
+
+There are many different cluster analysis algorithms, but they all work by finding groups of data points that are close to each other and far from other data points. The most common cluster analysis algorithms are:
+
+* **K-means clustering:** This algorithm groups data points into k clusters, where k is a predetermined number. The algorithm starts by randomly assigning each data point to a cluster. Then, it repeatedly updates the cluster centroids (the average of all data points in a cluster) and the cluster assignments until the centroids no longer change.
+* **Hierarchical clustering:** This algorithm starts by treating each data point as its own cluster. Then, it repeatedly merges the two most similar clusters until there is only one cluster left. There are two main types of hierarchical clustering: **agglomerative** and **divisive**. Agglomerative clustering starts with all data points in their own cluster and merges them together, while divisive clustering starts with all data points in one cluster and divides them into smaller and smaller clusters.
+
+Cluster analysis can be used for a variety of tasks, including:
+
+* **Data exploration:** Cluster analysis can be used to explore data and identify hidden patterns. For example, a marketing team might use cluster analysis to identify different customer segments.
+* **Data reduction:** Cluster analysis can be used to reduce the dimensionality of data while preserving as much of the variation as possible. This can be useful for visualization and for making data easier to understand.
+* **Classification:** Cluster analysis can be used to classify data points into known groups. For example, a medical researcher might use cluster analysis to classify patients into different disease groups.
+
+Cluster analysis is a powerful tool that can be used to analyze multivariate data. It is important to understand the different cluster analysis algorithms and their strengths and weaknesses in order to use them effectively.
+
+Here are some additional considerations when using cluster analysis:
+
+* **The number of clusters:** The number of clusters is a critical parameter in cluster analysis. If there are too few clusters, the data will not be well-separated. If there are too many clusters, the clusters will be too small and the results will not be reliable. There is no easy way to determine the optimal number of clusters, and it may be necessary to experiment with different values.
+* **The similarity measure:** The similarity measure is another important parameter in cluster analysis. The most common similarity measure is the Euclidean distance, but other measures, such as the Manhattan distance and the Mahalanobis distance, can also be used. The choice of similarity measure will affect the results of the cluster analysis.
+* **The cluster algorithm:** The cluster algorithm is also an important parameter in cluster analysis. Different algorithms will produce different results, so it is important to experiment with different algorithms to find the one that produces the most meaningful results.
+
+Cluster analysis is a powerful tool that can be used to analyze multivariate data. It is important to understand the different cluster analysis algorithms, their strengths and weaknesses, and the factors that can affect the results of cluster analysis in order to use it effectively.
+
+## k-nearest neighbors {#sec-knearest}
+
+
+## Principal component analysis {#sec-pca}
+
+## Type I and Type II errors.
